fix(client): improve navbar responsiveness on tablet devices

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,8 +13,12 @@
   }
 
   body {
-    background-color: #fcfbfcfc;
+    /* background-color: #fcfbfcfc; */
+    background-color: #FFFCF8;
     overflow-x: hidden;
+    /* background-image: linear-gradient(-225deg, #FFFEFF 0%, #D7FFFE 100%); */
+    /* background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%); */
+    /* background-image: linear-gradient(180deg, #FFFCF8 0%, #FFF8EC 100%) */
   }
   input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px #f9fafb inset; /* bg-gray-50 */
@@ -122,11 +126,6 @@
 }
 
 .scrollbar-hidden {
-  -ms-overflow-style: none;  /* IE/Edge */
-  scrollbar-width: none;     /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+  scrollbar-width: none; /* Firefox */
 }
-/* .scrollbar-hidden::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-  background: transparent;
-} */
